--- a/engines/attendance/app/views/attendance/custom/custom_cadastres/_form.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_cadastres/_form.html.haml
@@ -17,30 +17,28 @@
     = f.input :born_uf, label: "UF de nascimento", as: :select, collection: Core::Address::State.order(:name), label_method: :acronym, include_blank: 'Selecione...'
     = f.input :place_birth, label: "Cidade de nascimento"
     = f.input :gender, label: 'Sexo', as: :select, collection: Core::Candidate::Cadastre.genders, include_blank: false
-    = f.input :civil_state_id, label: "Estado Civil", as: :select, collection: Core::Candidate::CivilState.all
+    = f.input :civil_state_id, label: "Estado Civil", as: :select, collection: Core::Candidate::CivilState.where(status:true), include_blank: 'Selecione...'
     %br
-    = link_to "Próxima etapa", "javascript:void(0)", onclick: "show_step('step_two')", class: 'ui button yellow fluid step_one_next'
+    = link_to "Próxima página", "javascript:void(0)", onclick: "show_step('step_two')", class: 'ui button yellow fluid step_one_next'
   #step_two{style: 'display: none'}
     = f.input :rg, label: "Nº RG"
-    = f.input :rg_org, label: "RG ORG"
+    = f.input :rg_org, label: "Órgão expedidor"
     = f.input :rg_uf, label: "UF RG", as: :select, collection: Core::Address::State.order(:name), label_method: :acronym, include_blank: false
     = f.input :arrival_df, as: :string, label: 'Data de chegada ao DF', input_html: { class: 'date', value: f.object.arrival_df.present? ? localize(f.object.arrival_df) : nil }
-    = link_to "Etapa anterior", "javascript:void(0)", onclick: "show_step('step_one')", class: 'ui button'
-
-    = link_to "Próxima etapa", "javascript:void(0)", onclick: "show_step('step_three')", class: 'ui button yellow', style: 'float: right'
+    = link_to "Página anterior", "javascript:void(0)", onclick: "show_step('step_one')", class: 'ui button'
+    = link_to "Próxima página", "javascript:void(0)", onclick: "show_step('step_three')", class: 'ui button yellow', style: 'float: right'
   #step_three{style: 'display: none'}
     = f.input :special_condition_id, collection: {"Sim": 1, "Não": 2}, label: 'Possui condição especial?', as: :select, include_blank: false, input_html: { id: 'special_condition_id'}
     #special_condition_type_id{ style: "#{f.object.special_condition_id == 1 ? 'display: block;' : 'display: none;'}"}
       = f.input :special_condition_type_id, label: "Tipo de condição especial", as: :select, collection: Core::Candidate::SpecialConditionType.all, include_blank: false
-    = f.input :nis
+    = f.input :nis, label: "NIS"
     #cid{ style: "#{f.object.special_condition_id == 1 ? 'display: block;' : 'display: none;'}"}
-      = f.input :cid
+      = f.input :cid, label: "CID"
 
     = f.input :adapted_property, collection: {"Sim": 1, "Não": 2}, selected: 2, label: "Propriedade adaptada?", as: :select, include_blank: false
     = f.input :mother_name, label: "Nome (Mãe)"
-    = link_to "Etapa anterior", "javascript:void(0)", onclick: "show_step('step_two')", class: 'ui button'
-
-    = f.submit "Próxima etapa", class: 'ui button yellow next', style: 'float: right'
+    = link_to "Página anterior", "javascript:void(0)", onclick: "show_step('step_two')", class: 'ui button'
+    = f.submit "Próxima página", class: 'ui button yellow next', style: 'float: right'
 /    = link_to "Próxima etapa", new_custom_custom_ticket_custom_document_path(type: 'cadastre')
 :javascript
   $(document).ready(function() {
