--- a/engines/attendance/app/views/attendance/custom/custom_dependents/new.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_dependents/new.html.haml
@@ -3,7 +3,7 @@
     %i.big.arrow.left.icon
 .thirteen.wide.mobile.column.text-center
   .title-header Atendimento
-  .sub-title Envio de documentação
+  .sub-title Dependentes
   .divider
 .ui.grid.container
   .column
