--- a/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
@@ -1,6 +1,6 @@
 
 %p
-  %h4#rg Carteira de Identidade
+  %h4#rg Documento de identificação
 = simple_form_for @document, url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 1, anchor: 'rg') do |f|
   - @ticket.documents.where(document_type_id: 1).each_with_index do |document, index|
     .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
@@ -38,7 +38,11 @@
   = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
 
 %p
-  %h4#resid Comprovante de residência no DF, últimos 5 anos (ano a ano); Atenção: trazer comprovante para cada um dos últimos cinco anos. Não pode faltar nenhum ano.
+  %h4#resid
+    Comprovante de residência no DF nos últimos 5 anos. Atenção anexar documentos nos anos de 2014 a 2018 - ano a ano. Para saber mais
+    %a{href: "javascript:void(0)", onclick: 'open_arrival_df_modal();'}
+      clique aqui
+
 = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 3, anchor: 'resid') do |f|
   - @ticket.documents.where(document_type_id: 3).each_with_index do |document, index|
     .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
@@ -97,6 +101,115 @@
     = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
 
 
+- if @ticket.cadastre_mirror.civil_state_id == 1
+  %p
+    %h4#cert Anexe sua certidão de nascimento
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 15, anchor: 'cert') do |f|
+    - @ticket.documents.where(document_type_id: 8).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
+
+
+
+
+- if @ticket.cadastre_mirror.civil_state_id == 7
+  %p
+    %h4#uni Anexe a declaração de união estável com firma reconhecida
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 16, anchor: 'uni') do |f|
+    - @ticket.documents.where(document_type_id: 8).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
+
+
+
+- if @ticket.cadastre_mirror.civil_state_id == 2
+  %p
+    %h4#cas Anexe a certidão de casamento.
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 16, anchor: 'cas') do |f|
+    - @ticket.documents.where(document_type_id: 8).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
+
+
+
+- if @ticket.cadastre_mirror.civil_state_id == 4
+  %p
+    %h4#viu Anexe a certidão de casamento.
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 16, anchor: 'viu') do |f|
+    - @ticket.documents.where(document_type_id: 8).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
+
+  %p
+    %h4#viu2 Anexe a certidão de óbito de cônjuge.
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 17, anchor: 'viu2') do |f|
+    - @ticket.documents.where(document_type_id: 17).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
+
+
+
+
 - if @ticket.allow_cadastre
   %br
   %br
@@ -105,4 +218,38 @@
   %br
   %br
   .ui.label.red{style: 'text-align: justify'}
-    %p Para realizar a finalização desta etapa, favor enviar ao menos um arquivo de cada categoria de documentaçãoe exigida.
+    %p Para finalizar esta etapa, favor enviar ao menos um 'arquivo' de cada categoria exigida.
+
+
+
+// 5 ANOS DE DF
+#arrival_df_modal.ui.modal{style: 'display: none;'}
+  .ui.content
+    %p Para comprovar os 5 anos no DF e o tempo de chegada no DF, serão aceitos os seguintes documentos que contenham nome e endereço residencial do candidato.
+    %br/
+
+    %p a) Comprovante de água, luz ou telefone;
+    %p b) Carteira de Trablaho acompanhada de declaração emitida pelo órgão empregado;
+    %p c) Declaração funcional, quando se tratar de servidor público;
+    %p d) Declaração de instituição bancária com movimentação de conta corrente;
+    %p e) Declaração escolar do candidato ou dos filhos;
+    %p f) Fatura/carnê de comprar a crédito;
+    %p g) Ocorrência policial;
+    %p h) Notificação de multas de trânsito;
+    %p i) Contrato de locação de imóvel, devidamente autenticado, válido somente para o ano de assinatura com autenticação no mesmo ano;
+    %p j) Declaração de IRPF com recibo de entrega, sendo considerado para comprovação o ano calendário do IR;
+
+    %br
+
+    %p{style: 'text-align: center'}
+      %a.ui.button.fluid{href: 'javascript:void(0)', onclick:'close_modal();'}
+        Fechar
+
+:javascript
+  function open_arrival_df_modal(){
+    $("#arrival_df_modal").modal('show')
+  }
+
+  function close_modal() {
+    $('.ui.modal').modal('hide')
+  }
