--- a/engines/attendance/app/views/attendance/custom/custom_documents/new.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/new.html.haml
@@ -20,10 +20,10 @@
   .column
     .ui.label.blue{style: 'margin-bottom: 30px'}
       %p{style: 'text-align: justify; font-size: 14px !important'}
-        Neste momento você deverá anexar todas fotos das páginas das cartorárias.
+        Neste momento você deverá anexar TODAS as fotos dos documentos que comprovem seus dados.
         %br
         %br
-        Escolha qualquer um dos Cartórios relacionados e faça seu requerimento para as nove certidões em um só local. Para saber mais
+        IMPORTANTE: As fotos devem estar legíveis e compatíveis com a documentação solicitada.
         %a{href: 'http://www.codhab.df.gov.br/pagina/2', target: '_blank'}
           clique aqui.
 
