--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
@@ -6,10 +6,15 @@
   .sub-title Processo de habilitação
   .divider
 .ui.grid.container
-  .ui.label.blue{style: 'margin-bottom: 30px'}
-    %p{style: 'text-align: justify; font-size: 14px !important'}
-      O processo convocatório somente será considerado finalizado após a conclusão das 5 etapas abaixo no prazo estabelecido no edital de convocação.
-
+  - if (@ticket.action_one && @ticket.action_two && @ticket.action_three && @ticket.action_four && @ticket.action_five)
+    .ui.label.green.fluid{style: 'text-align: justify; font-size: 14px'}
+      %p Parabéns, você concluiu as 5 etapas do atendimento.
+      %p Favor aguardar a análise dos documentos enviados.
+      %p Posteriormente, você receberá uma notificação pelo aplicativo sobre sua situação no programa habitacional do DF.
+  - else
+    .ui.label.blue{style: 'margin-bottom: 30px'}
+      %p{style: 'text-align: justify; font-size: 14px !important'}
+        Para finalizar o atendimento é necessário que você conclua as 5 etapas abaixo:
   %table.ui.table.celled
     %tbody{style: "#{@ticket.action_one ? 'background-color: #51a551' : ''}"}
       %tr
@@ -19,9 +24,9 @@
           - else
             %i.icon.warning{style: 'color: gray'}
           - if @ticket.disable_link
-            = link_to "Atualização de dados básicos", "#", style: "#{@ticket.action_one ? 'color: white' : ''}"
+            = link_to "Dados básicos", "#", style: "#{@ticket.action_one ? 'color: white' : ''}"
           - else
-            = link_to "Atualização de dados básicos", edit_custom_custom_ticket_custom_cadastre_path(@ticket,   @ticket.cadastre_mirror_id), style: "#{@ticket.action_one ? 'color: white' : ''}"
+            = link_to "Dados básicos", edit_custom_custom_ticket_custom_cadastre_path(@ticket,   @ticket.cadastre_mirror_id), style: "#{@ticket.action_one ? 'color: white' : ''}"
           %br
 
     %tbody{style: "#{@ticket.action_two ? 'background-color: #51a551' : ''}"}
@@ -32,9 +37,9 @@
           - else
             %i.icon.warning{style: 'color: gray'}
           - if @ticket.disable_link
-            = link_to "Atualização de dependentes", "#", style: "#{@ticket.action_two ? 'color: white' : ''}"
+            = link_to "Dependentes", "#", style: "#{@ticket.action_two ? 'color: white' : ''}"
           - else
-            = link_to "Atualização de dependentes", custom_custom_ticket_custom_dependents_path(@ticket), style: "#{@ticket.action_two ? 'color: white' : ''}"
+            = link_to "Dependentes", custom_custom_ticket_custom_dependents_path(@ticket), style: "#{@ticket.action_two ? 'color: white' : ''}"
     %tbody{style: "#{@ticket.action_three ? 'background-color: #51a551' : ''}"}
       %tr
         %td
@@ -43,9 +48,9 @@
           - else
             %i.icon.warning{style: 'color: gray'}
           - if @ticket.disable_link
-            = link_to "Atualização de rendas", "#", style: "#{@ticket.action_three ? 'color: white' : ''}"
+            = link_to "Renda", "#", style: "#{@ticket.action_three ? 'color: white' : ''}"
           - else
-            = link_to "Atualização de rendas", custom_custom_ticket_custom_incomes_path(@ticket), style: "#{@ticket.action_three ? 'color: white' : ''}"
+            = link_to "Renda", custom_custom_ticket_custom_incomes_path(@ticket), style: "#{@ticket.action_three ? 'color: white' : ''}"
     %tbody{style: "#{@ticket.action_four ? 'background-color: #51a551' : ''}"}
       %tr
         %td
@@ -54,9 +59,9 @@
           - else
             %i.icon.warning{style: 'color: gray'}
           - if @ticket.disable_link
-            = link_to "Atualização de contatos", "#", style: "#{@ticket.action_four ? 'color: white' : ''}"
+            = link_to "Contatos pessoais", "#", style: "#{@ticket.action_four ? 'color: white' : ''}"
           - else
-            = link_to "Atualização de contatos", edit_custom_custom_ticket_custom_contact_path(@ticket, @ticket.cadastre_mirror_id), style: "#{@ticket.action_four ? 'color: white' : ''}"
+            = link_to "Contatos pessoais", edit_custom_custom_ticket_custom_contact_path(@ticket, @ticket.cadastre_mirror_id), style: "#{@ticket.action_four ? 'color: white' : ''}"
     %tbody{style: "#{@ticket.action_five ? 'background-color: #51a551' : ''}"}
       %tr
         %td
@@ -65,15 +70,10 @@
           - else
             %i.icon.warning{style: 'color: gray'}
           - if @ticket.disable_link
-            = link_to "Envio da cartorária", "#", style: "#{@ticket.action_five ? 'color: white' : ''}"
+            = link_to "Certidões dos cartórios", "#", style: "#{@ticket.action_five ? 'color: white' : ''}"
           - else
-            = link_to "Envio da cartorária", new_custom_custom_ticket_custom_document_path(@ticket, type: 'document'), style: "#{@ticket.action_five ? 'color: white' : ''}"
+            = link_to "Certidões dos cartórios", new_custom_custom_ticket_custom_document_path(@ticket, type: 'document'), style: "#{@ticket.action_five ? 'color: white' : ''}"
 
 
   %br
   %br
-
-  - if @ticket.action_one && @ticket.action_two && @ticket.action_three && @ticket.action_four && @ticket.action_five
-    .ui.label.blue.fluid{style: 'text-align: center'}
-      %p Parabéns! Você completou os 5 passos.
-      %p A CODHAB recebeu todos os seus dados e documentações, favor aguardar a análise e processamento do seu atendimento. Você receberá notificações sobre a situação do seu atendimento.
