--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_welcome.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_welcome.html.haml
@@ -6,12 +6,9 @@
   .sub-title Processo de habilitação
   .divider
 .ui.grid.container
-%h2.text-center Bem-vindo ao Atendimento CODHAB
+%h2.text-center Bem-vindo ao atendimento da CODHAB
 %p{style: 'text-align: justify'}
-  Você foi convocado a enviar suas documentações com vistas à habilitação no Programa Habitacional do Distrito Federal.
-  %br
-  %b Importante: As fotos dos documentos devem estar legíveis e devem representar o documento solicitado.
-
+  Você foi convocado para enviar documentação a fim de ser habilitado no Programa Habitacional do DF
 %br
 %br
 = link_to 'Iniciar meu atendimento', new_custom_custom_ticket_path, class: 'ui button yellow fluid', style: 'margin-left: 10px; margin-right: 10px; padding-top: 20px; padding-bottom: 20px; font-size: 20px', remote: true, data: { disable_with: 'Processando, aguarde...'}
