--- a/engines/attendance/app/views/attendance/custom/custom_images/show.js.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_images/show.js.haml
@@ -1,2 +1,2 @@
-$(".ui.modal").html("#{escape_javascript(render 'show')}")
-$(".ui.modal").modal('show')
+$("#master.ui.modal").html("#{escape_javascript(render 'show')}")
+$("#master.ui.modal").modal('show')
