--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
@@ -77,3 +77,22 @@
 
   %br
   %br
+
+- if !@ticket.term_one
+  :javascript
+    $(document).ready(function() {
+      $('.ui.modal').html("#{escape_javascript(render 'term_one')}")
+      $('.ui.modal').modal('show')
+    })
+- if !@ticket.term_two
+  :javascript
+    $(document).ready(function() {
+      $('.ui.modal').html("#{escape_javascript(render 'term_two')}")
+      $('.ui.modal').modal('show')
+    })
+- if !@ticket.term_three
+  :javascript
+    $(document).ready(function() {
+      $('.ui.modal').html("#{escape_javascript(render 'term_three')}")
+      $('.ui.modal').modal('show')
+    })
