--- a/engines/attendance/app/views/attendance/custom/custom_documents/new.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/new.html.haml
@@ -40,8 +40,8 @@
   %br/
   %h4 Documento sendo enviado. Aguarde...
   %br/
-  %h3
-
+  %br/
+  = image_tag 'loading.gif'
 :javascript
   $(document).ready(function() {
     $(".upload").change(function() {
