--- a/engines/attendance/app/views/attendance/custom/custom_documents/_income_dependent.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_income_dependent.html.haml
@@ -1,27 +1,31 @@
-.ui.segment
-  %h4#rg Comprovante de Renda
-  - unless @ticket.documents.where(document_type_id: 15).present?
-    .ui.label.red.tiny{style: 'margin-bottom: 12px'} Pendente
-  = simple_form_for @document, url: custom_custom_ticket_custom_documents_path(type: 'income', document_type_id: 15, anchor: 'income', dependent_mirror_id: params[:dependent_mirror_id]) do |f|
-    - if @ticket.documents.where(document_type_id: 15, dependent_mirror_id: params[:dependent_mirror_id]).present?
-      - @ticket.documents.where(document_type_id: 15, dependent_mirror_id: params[:dependent_mirror_id]).each_with_index do |document, index|
-        = link_to "#{index + 1} <i class='file icon'></i>".html_safe, custom_custom_image_path(document, dependent_mirror_id: params[:dependent_mirror_id], type: params[:type], anchor: 'rg'), remote: true, class: 'ui button blue icon', style: 'margin-bottom: 10px'
+- if @ticket.cadastre_mirror.dependent_mirrors.find(params[:dependent_mirror_id]).age >= 18
+  .ui.segment
+    %h4#rg Comprovante de Renda
+    - unless @ticket.documents.where(document_type_id: 15).present?
+      .ui.label.red.tiny{style: 'margin-bottom: 12px'} Pendente
+    = simple_form_for @document, url: custom_custom_ticket_custom_documents_path(type: 'income', document_type_id: 15, anchor: 'income', dependent_mirror_id: params[:dependent_mirror_id]) do |f|
+      - if @ticket.documents.where(document_type_id: 15, dependent_mirror_id: params[:dependent_mirror_id]).present?
+        - @ticket.documents.where(document_type_id: 15, dependent_mirror_id: params[:dependent_mirror_id]).each_with_index do |document, index|
+          = link_to "#{index + 1} <i class='file icon'></i>".html_safe, custom_custom_image_path(document, dependent_mirror_id: params[:dependent_mirror_id], type: params[:type], anchor: 'rg'), remote: true, class: 'ui button blue icon', style: 'margin-bottom: 10px'
 
-      %br/
-      %br/
-    - else
-      %i  Nenhum arquivo enviado.
-      %br/
-      %br/
-    %div
-      %label.ui.icon.button.fluid{:for => 'document_1'}
-        %i.photo.icon
-        Enviar novo arquivo
-      = f.input :attachment, as: :hidden, label: false, as: :file, input_html: { style: 'display: none', class: 'upload', id: 'document_1' }
+        %br/
+        %br/
+      - else
+        %i  Nenhum arquivo enviado.
+        %br/
+        %br/
+      %div
+        %label.ui.icon.button.fluid{:for => 'document_1'}
+          %i.photo.icon
+          Enviar novo arquivo
+        = f.input :attachment, as: :hidden, label: false, as: :file, input_html: { style: 'display: none', class: 'upload', id: 'document_1' }
 
+- else
+  %p{style: 'text-align: center'}
+    %i Nenhuma documentação exigida para o dependente.
 %br
 %br
-  - if @ticket.documents.where(document_type_id: 15, dependent_mirror_id: params[:dependent_mirror_id]).present?
+  - if @ticket.allow_income_dependent params[:dependent_mirror_id]
     = link_to "Continuar atualização", custom_custom_ticket_custom_incomes_path(@ticket), class: 'ui button fluid green', style: 'font-size: 25px', data: { disable_with: 'Finalizando. Aguarde...'}
   - else
     .ui.label.red{style: 'text-align: justify; font-size: 15px;'}
